# gor3a

./: main.py
.github/workflows/: main_gor3a-backend.yml
app/: package.json  tsconfig.json
app/config/: paths.js  webpack.config.js  webpackDevServer.config.js
app/public/: gor3a.html  index.html
app/src/: gor3a.tsx
app/src/components/: Gor3aApp.tsx  TodoApp.tsx
app/src/gor3a/: index.tsx
backend/: main.py  pyproject.toml  requirements.txt  test_main.py
backend/src/: core.py  main.py
backend/src/templates/: receiver.html
frontend/: .gitignore  gor3a.html  package.json
frontend/public/: index.html
frontend/src/components/: App.tsx  Gor3aView.tsx  SelectionList.tsx  TodoApp.tsx  TodoFooter.tsx  TodoHeader.tsx  TodoListItem.tsx
frontend/src/components/App/: App.tsx
frontend/src/store/: index.ts
