[tool.poetry]
name = "gor3a-backend"
version = "0.1.0"
description = "backend for gor3a, a gift swap name picker"
authors = ["Ali Elbashir <alielbashiir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
